style.css
:root {
  --main-color: #61cf65;
  --background-color: #f9f9f9;
  --header-color: #222;
  --light-border-color: #cfcfcf;
  --shelf-color: rgb(168, 168, 168);
  --border-radius: 3px;
}

body, html {
  margin: 0;
  padding: 0 10px;
  min-height: 100%;
  background-color: var(--background-color);
}

header {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  align-items: center;
  margin-bottom: 20px;
}

h1 {
  width: min(450px, 90%);
  text-align: center;
  font-size: 40px;
  margin-top: 100px;
  margin-bottom: 10px;
  color: var(--header-color);
}

h2 {
  width: min(400px, 80%);
  text-align: center;
  font-weight: 400;
  color: var(--shelf-color);
  margin-bottom: 40px;
}

main {
  display: flex;
  flex-direction: column;
  gap: 10px;
  height: 100%;
}

dialog {
  border: none;
  width: min(500px, 80%);
  height: min(500px, 80%);
  border-radius: var(--border-radius);
}

form {
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: space-between;
  gap: 20px;
}

form > * {
  display: flex;
  flex-direction: column;
  gap: 5px;
  width: 100%;
}

legend {
  position: absolute;
  top: 0;
  left: 0;
  background-color: var(--header-color);
  color: var(--background-color);
  width: 100%;
  height: 3rem;
  padding: 5px 0;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  user-select: none;
}

p {
  margin: 0;
}

input {
  transition: border-color 0.3s;
  border: 1px solid var(--light-border-color);
}

input:focus {
  outline: none;
  border: 2px solid var(--main-color);
}

.title-section {
  margin-top: 5rem;
}

#title-text, #author-text, #pages-text {
  height: 3rem;
  padding: 0 10px;
  font-size: 14px;
}

.color-section {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 10px;
}

#color {
  height: 25px;
  width: 21px;
  -webkit-appearance: none;
  -moz-appearance: none;
  background-color: transparent;
  appearance: none;
  border: none;
  padding: 0;
  cursor: pointer;
}

#color::-webkit-color-swatch {
  border-radius: var(--border-radius);
  border: 1px solid var(--light-border-color);
}

#color::-moz-color-swatch {
  border-radius: var(--border-radius);
  border: 1px solid var(--light-border-color);
}
 

.read-section {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 10px;
}

.button-section {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 0;
  width: 100%;
}

#insert-book, #cancel-button {
  border: none;
  height: 3rem;
  color: var(--background-color);
  cursor: pointer;
}

#insert-book {
  background-color: var(--main-color);
}

#cancel-button {
  background-color: var(--shelf-color);
}

#read {
  accent-color: var(--main-color);
}

.book-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
}

.book-shelf > * {
  cursor: default;
  background-color: var(--main-color);
  color: var(--background-color);
  border-radius: var(--border-radius);
  min-height: 250px;
  padding: 10px;
  box-sizing: border-box;
  transition: width 0.3s;
}

.book-expanded {
  width: 200px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  gap: 5px;
  overflow-x: hidden;
  overflow-y: visible;
  font-size: 1em;
}

.upper-details {
  width: 100%;
  display: grid;
  gap: 5px;
  grid-template-columns: 3fr 1fr;
  grid-template-areas: 
  "title removeB"
  "pages pages";
}

#title {
  grid-area: title;
}

#pages {
  grid-area: pages;
}

#remove-button {
  grid-area: removeB;
  color: var(--background-color);
  cursor: pointer;
  width: 20px;
  font-size: 15px;
  background: none;
  border: none;
  display: flex;
  justify-self: end;
  align-self: start;
  justify-content: center;
  align-items: center;
}

.lower-details {
  text-align: end;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: end;
  gap: 50px;
}

.book-spine {
  width: 40px;
  writing-mode: vertical-lr;
  text-orientation: sideways;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.toggle-read {
  writing-mode: horizontal-tb;
  user-select: none;
  cursor: pointer;
}

.book-spine p {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.book-shelf {
  display: flex;
  gap: 5px;
  padding: 5px;
  width: 100%;
  height: 250px;
  border-radius: var(--border-radius);
  background-color: var(--background-color);
  border: 1px solid var(--shelf-color);
}

#add-book {
  width: 200px;
  height: 60px;
  background-color: var(--background-color);
  color: var(--header-color);
  border-radius: var(--border-radius);
  padding: 10px;
  border: 1px solid var(--light-border-color);
  cursor: pointer;
  font-size: 16px;
  transition: color 0.2s;
}

#add-book:hover {
  color: var(--main-color);
  border-color: var(--main-color);
}

.read {
  color: var(--background-color);
  font-size: 1.5rem;
}

.unread {
  color: var(--shelf-color);
  font-size: 1.5rem;
}

.read, .unread {
  text-shadow:
    -1px -1px 0 var(--shelf-color),
    0 -1px 0 var(--shelf-color),
    1px -1px 0 var(--shelf-color),
    -1px 0 0 var(--shelf-color),
    1px 0 0 var(--shelf-color),
    -1px 1px 0 var(--shelf-color),
    0 1px 0 var(--shelf-color),
    1px 1px 0 var(--shelf-color);
}

